# emitter-detection-python

./: .gitignore  CHANGELOG.md  README.md  make_figures.py  pyproject.toml
aoa/: aoa.py  directional.py  doppler.py  interferometer.py  watson_watt.py
array/: model.py  perf.py  solvers.py
array_df/: model.py  perf.py  solvers.py
atm/: __init__.py  model.py  reference.py  test.py
detector/: __init__.py  squareLaw.py  xcorr.py
examples/: __init__.py  chapter10.py  chapter11.py  chapter12.py  chapter13.py  chapter2.py  chapter3.py  chapter4.py  chapter5.py  chapter7.py  chapter8.py  chapter9.py
fdoa/: model.py  perf.py  solvers.py  system.py
hybrid/: __init__.py  model.py  perf.py  solvers.py  system.py
make_figures/: __init__.py  appendixB.py  appendixC.py  appendixD.py  atm_itu_validation.py  chapter1.py  chapter10.py  chapter11.py  chapter12.py  chapter13.py  chapter2.py  chapter3.py  chapter4.py  chapter5.py  chapter6.py  chapter7.py  chapter8.py  chapter9.py
noise/: model.py
prop/: model.py
tdoa/: __init__.py  model.py  perf.py  solvers.py  system.py
tests/: test_aoa.py  test_aoa_gain_functions.py  test_aoa_methods.py  test_array_df.py  test_atm.py  test_constraints.py  test_coordinates.py  test_covariance.py  test_crlb.py  test_detector.py  test_doppler_aoa.py  test_errors.py  test_fdoa.py  test_geo.py  test_hybrid.py  test_measurement.py  test_noise.py  test_perf.py  test_prop.py  test_search_space.py  test_solvers.py  test_tdoa.py  test_tracker_association.py  test_tracker_deleter.py  test_tracker_initiator.py  test_tracker_integration.py  test_tracker_measurement.py  test_tracker_promoter.py  test_tracker_states.py  test_tracker_track.py  test_tracker_transition.py  test_triang.py  test_unit_conversions.py  test_utils.py
triang/: __init__.py  model.py  perf.py  (+2 more)
(+95 files in other folders)
