[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ewgeo"
version = "0.1.0"
authors = [
  { name="Nicholas O'Donoughue", email="nodonoug@rand.org" },
]
description = "Python code companion to Emitter Detection and Geolocation for Electronic Warfare (Artech House, 2019) and Practical Geolocation for Electronic Warfare Using MATLAB (Artech House, 2022)"
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
  "matplotlib",
  "numpy",
  "scipy",
  "seaborn",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    # Expected: ill-conditioned LOB geometry in angle-bisector tests
    "ignore:Slopes are almost parallel:UserWarning",
    # Expected: latitude conversion at the poles (test_global_unit_conversion)
    "ignore:invalid value encountered in scalar divide:RuntimeWarning",
]